# VSS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-tools.txt  requirements.txt
data/: README.md
notebooks/: 01_dwellings_compiler.ipynb  bigDatahandler.ipynb
outputs/: README.md
scripts/: make_pix2pix_pairs.py  prepare_data.sh  rename_files.sh  split_dataset.sh
src/vssv1/: __init__.py  bookie.py  boundaries.py  fp_renderer.py  hochbauzeichner.py  init_outline.py  paths.py  recenter.py
tools/: estimate_work_hours.py
